# Analysis-of-Tonality

./: CatBoostClassifier.ipynb  Dataset_Maker (2).ipynb  Dataset_Maker.ipynb  NER.ipynb  README.md  Rubert.ipynb
Inference/: app.py  pyproject.toml
Inference/src/: ner_inference.py  tsa_inference.py
